Fixed overflow-x. Moved Challenges to /ctf. Added favicon.

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -6,7 +6,6 @@ html {
   @media screen and (max-width: 684px) {
       font-size: 0.70rem;
   }
-  overflow-x: hidden;
 }
 
 *,
